Sun Mar 23 08:12:27 2014  Eric Wong  <e@80x24.org>

	* st.c (hash_pos): use bitwise AND to avoid slow modulo op
	  (new_size): power-of-two sizes for hash_pos change
	  (st_numhash): adjust for common keys due to lack of prime modulo
	  [Feature #9425]
	* hash.c (rb_any_hash): right shift for symbols
	* benchmark/bm_hash_aref_miss.rb: added to show improvement
	* benchmark/bm_hash_aref_sym_long.rb: ditto
	* benchmark/bm_hash_aref_str.rb: ditto
	* benchmark/bm_hash_aref_sym.rb: ditto
	* benchmark/bm_hash_ident_num.rb: added to prevent regression
	* benchmark/bm_hash_ident_obj.rb: ditto
	* benchmark/bm_hash_ident_str.rb: ditto
	* benchmark/bm_hash_ident_sym.rb: ditto

Sat Mar 22 22:56:45 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): compare the file names of object in which
	  symbols exist. [Bug #9654] [ruby-dev:48058]

Sat Mar 22 06:46:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi/util.rb (escape_html, unescape_html): make synonyms
	  aliases instead of wrapper methods.

	* lib/cgi/util.rb (escape_element, unescape_element): ditto.
	  [Fixes GH-573]

Fri Mar 21 21:57:34 2014  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix a build problem with clang and --with-opt-dir.
	  If ruby is configured with --with-opt-dir=dir when using clang
	  as compiler, a warning `clang: warning: argument unused during
	  compilation: '-I dir'` is emitted almost every time clang
	  compiles a file.  Unfortunately, RUBY_CHECK_PRINTF_PREFIX takes
	  any output from the compiler as fatal error, and the check thus
	  fails due to the warning.  This is an attempt to fix the problem
	  by adding a flag -Qunused-arguments to CFLAGS locally in the
	  function to suppress the warning. [ruby-dev:48062] [Bug #9658]
	  [Fixes GH-571] https://github.com/ruby/ruby/pull/571

Fri Mar 21 16:31:56 2014  Zachary Scott  <e@zzak.io>

	* gc.c: [DOC] Fix call-seq for GC.start by @jasonrclark [Fixes GH-572]
	  https://github.com/ruby/ruby/pull/572
